# meteo-cli

./: Cargo.toml  args.json  query.graphql  schema.graphql
src/: main.rs
src/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  properties.rs  schema.graphql  vertex.rs
src/adapter/helpers/: mod.rs  optim.rs
