[package]
name = "meteo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.7.1"
itertools = "0.12.1"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono" ] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
serde = "1.0.185"
serde_json = "1.0.96"
